<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textTituloMenuAdm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuAdm">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/textView"
        android:text="@string/tituloMenuAdm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="105dp" />

    <Button
        android:id="@+id/btnVerAgendaMenuAdm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/botoes"
        android:text="@string/ServicoAgenda_MenuAdm"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnCadAgendaMenuAdm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnAgendaServicoMenuAdm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/botoes"
        android:text="@string/AgendarServico_MenuAdm"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCadServicoMenuAdm" />

    <Button
        android:id="@+id/btnCadAgendaMenuAdm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/botoes"
        android:text="@string/CadastroAgenda_MenuAdm"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnCadServicoMenuAdm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVerAgendaMenuAdm" />

    <Button
        android:id="@+id/btnCadServicoMenuAdm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/botoes"
        android:text="@string/CadastroServiço_MenuAdm"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnAgendaServicoMenuAdm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCadAgendaMenuAdm" />
</androidx.constraintlayout.widget.ConstraintLayout>