<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_ps"
    tools:context=".CadastroServico">

    <TextView
        android:id="@+id/textTituloCadastroServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:text="@string/textTituloCadastroServico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <EditText
        android:id="@+id/editTituloCadastroServico"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/editbox_background"
        android:ems="20"
        android:hint="@string/hintTituloCadastroServiço"
        android:inputType="textPassword"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/editHorasCadastroServico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTituloCadastroServico"
        app:layout_marginBaseline="60dp" />

    <EditText
        android:id="@+id/editFabricanteCadastroServico"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/editbox_background"
        android:ems="20"
        android:hint="@string/hintFabricanteCadastroServiço"
        android:inputType="textPassword"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/editModeloCadastroServico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editHorasCadastroServico"
        app:layout_marginBaseline="60dp" />

    <EditText
        android:id="@+id/editModeloCadastroServico"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/editbox_background"
        android:ems="20"
        android:hint="@string/hintModeloCadastroServiço"
        android:inputType="textPassword"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/btnVoltarCadastroServico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFabricanteCadastroServico"
        app:layout_marginBaseline="60dp" />

    <EditText
        android:id="@+id/editHorasCadastroServico"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/editbox_background"
        android:ems="20"
        android:hint="@string/hintHorasCadastroServiço"
        android:inputType="textPassword"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/editFabricanteCadastroServico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTituloCadastroServico"
        app:layout_marginBaseline="60dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="105dp" />

    <Button
        android:id="@+id/btnVoltarCadastroServico"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/botoes"
        android:text="@string/btnVoltarCadastroServicos"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSalvarCadastroServico"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editModeloCadastroServico" />

    <Button
        android:id="@+id/btnSalvarCadastroServico"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/botoes"
        android:text="@string/btnSalvarCadastroServicos"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btnVoltarCadastroServico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnVoltarCadastroServico" />

</androidx.constraintlayout.widget.ConstraintLayout>