<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EscolherServicos">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="105dp" />

    <TextView
        android:id="@+id/textTituloEscolherServoco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:text="@string/textTituloEscolherServico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <EditText
        android:id="@+id/editServicoEscolherServico"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/editbox_background"
        android:ems="20"
        android:hint="@string/hintServicoEscolherServico"
        android:inputType="textPassword"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/editFabricanteEscolherServico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTituloEscolherServoco"
        app:layout_marginBaseline="60dp" />

    <EditText
        android:id="@+id/editModeloFabricanteServico"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/editbox_background"
        android:ems="20"
        android:hint="@string/hintModeloEscolherServico"
        android:inputType="textPassword"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/btnContinuarEscolherServico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFabricanteEscolherServico"
        app:layout_marginBaseline="60dp" />

    <EditText
        android:id="@+id/editFabricanteEscolherServico"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/editbox_background"
        android:ems="20"
        android:hint="@string/hintFabricanteEscolherServico"
        android:inputType="textPassword"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/editModeloFabricanteServico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editServicoEscolherServico"
        app:layout_marginBaseline="60dp" />

    <Button
        android:id="@+id/btnContinuarEscolherServico"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/botoes"
        android:text="@string/btnConfirmarAgendarServico"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:circularflow_defaultRadius="10dp"
        app:circularflow_radiusInDP="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editModeloFabricanteServico" />
</androidx.constraintlayout.widget.ConstraintLayout>